--- a/index.html
+++ b/index.html
@@ -281,6 +281,41 @@
       Powered by Let's Talk Digital
     </div>
   </main>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const form = document.querySelector('form');
 
+  form.addEventListener('submit', async function (e) {
+    e.preventDefault();
+
+    const formData = {
+      name: document.getElementById('full_name').value.trim(),
+      email: document.getElementById('email').value.trim(),
+      phone: document.getElementById('phone').value.trim(),
+      tiktok: document.getElementById('tiktok').value.trim()
+    };
+
+    try {
+      const response = await fetch('https://prestoghana.com/ltd/tiktok', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(formData)
+      });
+
+      if (response.ok) {
+        alert('✅ Your details have been submitted successfully!');
+        form.reset();
+      } else {
+        alert('⚠️ Something went wrong. Please try again.');
+      }
+    } catch (error) {
+      console.error(error);
+      alert('❌ Network error. Please check your internet connection.');
+    }
+  });
+});
+</script>
 </body>
 </html>
