--- a/index.html
+++ b/index.html
@@ -216,9 +216,10 @@
   <main class="wrapper">
     <!-- Replace with your actual logo later -->
     <div class="brand-badge">
-      <span class="big">LET'S</span>
+      <img style="width: 50px;" src="https://firebasestorage.googleapis.com/v0/b/ineruu-142dc.appspot.com/o/ineruu-142dc-default-rtdb%2FImages%2FLTD%20logo.png1761652083548.jpg?alt=media&token=c9869f8a-ffe7-4a4e-9a20-384a2928f105" alt="">
+      <!-- <span class="big">LET'S</span>
       <span class="big">TALK</span>
-      <span class="big">DIGITAL</span>
+      <span class="big">DIGITAL</span> -->
     </div>
 
     <header>
